--- a/estate-complexes-redesign/css/filter.scss
+++ b/estate-complexes-redesign/css/filter.scss
@@ -332,6 +332,7 @@
     border-radius: $border-radius-big;
     box-shadow: none;
     background-image: none;
+    margin-bottom: 5px;
   }
 
   &.well-sm {
