--- a/estate-complexes-redesign/css/global.scss
+++ b/estate-complexes-redesign/css/global.scss
@@ -1246,7 +1246,7 @@ a.dropdown-toggle:visited {
     }
   }
   .selectize-input {
-    padding: 13px 15px;
+    padding: 11px 15px;
     font-size: 14px;
     border-radius: $border-radius;
     border: 1px solid $color-secondary;
